--- a/cookbooks/apt/.kitchen.yml
+++ b/cookbooks/apt/.kitchen.yml
@@ -7,62 +7,40 @@ platforms:
 - name: ubuntu-12.04
   driver_config:
     box: opscode-ubuntu-12.04
-    box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode_ubuntu-12.04_provisionerless.box
+    box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-12.04_provisionerless.box
   run_list:
   - recipe[apt]
 
 - name: ubuntu-10.04
   driver_config:
     box: opscode-ubuntu-10.04
-    box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode_ubuntu-10.04_provisionerless.box
+    box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-10.04_provisionerless.box
   run_list:
   - recipe[apt]
 
-- name: debian-7.1.0
+- name: centos-6.4
   driver_config:
-    box: opscode-debian-7.1.0
-    box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode_debian-7.1.0_provisionerless.box
-  run_list:
-  - recipe[apt]
+    box: opscode-centos-6.4
+    box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_centos-6.4_provisionerless.box
 
-- name: ubuntu-13.04
+- name: centos-5.9
   driver_config:
-    box: opscode-ubuntu-13.04
-    box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode_ubuntu-13.04_provisionerless.box
-  run_list:
-  - recipe[apt]
+    box: opscode-centos-5.9
+    box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_centos-5.9_provisionerless.box
 
 suites:
 - name: default
   run_list:
-  - recipe[minitest-handler]
-  - recipe[apt_test]
+  - recipe[git]
   attributes: {}
 
-- name: cacher-client
+- name: source
+  excludes: ["ubuntu-12.04", "ubuntu-10.04"]
   run_list:
-  - recipe[minitest-handler]
-  - recipe[apt_test::cacher-client]
+  - recipe[git::source]
   attributes: {}
 
-- name: cacher-ng
+- name: server
   run_list:
-  - recipe[minitest-handler]
-  - recipe[apt_test::cacher-ng]
-  attributes: {}
-
-- name: cacher-ng-client
-  run_list:
-  - recipe[minitest-handler]
-  - recipe[apt_test::cacher-ng-client]
-  attributes:
-    apt:
-      cacher_dir: '/tmp/apt-cacher'
-      cacher_port: '9876'
-      compiletime: true
-
-- name: lwrps
-  run_list:
-  - recipe[minitest-handler]
-  - recipe[apt_test::lwrps]
+  - recipe[git::server]
   attributes: {}
